added thumbnail parameter for readme

--- a/.readme.md
+++ b/.readme.md
@@ -13,5 +13,5 @@ Copyright: {{copyright}}
 _Explanation: {{explanation}}_
 
 [1]: https://github.com/sirekanian/spacetime
-[2]: apod.nasa.gov/apod/image/2210/aurora_kwon_960.jpg
+[2]: {{thumbnail}}
 [3]: {{url}}
