updated readme file

--- a/.readme.md
+++ b/.readme.md
@@ -1,17 +1,35 @@
 # Astronomy Picture of the Day
 
-This repository contains pictures from https://apod.nasa.gov/apod/ optimized for thumbnails.
+This repository contains pictures from https://apod.nasa.gov optimized for thumbnails.
 
-The repository is used by [Spacetime][1] android application.
+Thumbnails are updated using the shell script [`apod.sh`](apod.sh). The script
+uses [apod-api](https://github.com/nasa/apod-api) to get images and [imagemagick](https://imagemagick.org) to
+optimize them.
+
+## How to use
+
+For using thumbnails replace the host of the original image from `apod.nasa.gov` to `sirekanian.com`.
+
+For example if you have an image with url:<br>
+{{url}}
+
+The thumbnail url will look like this:<br>
+https://sirekanian.com/apod/{{thumbnail}}
 
 ## {{title}}
 
 Copyright: {{copyright}}
 
-[![the picture of the day][2]][3]
+[![the picture of the day][1]][2]
 
 _Explanation: {{explanation}}_
 
-[1]: https://github.com/sirekanian/spacetime
-[2]: {{thumbnail}}
-[3]: {{url}}
+## Usages
+
+The repository is used by [Spacetime][3] android application.
+
+[1]: {{thumbnail}}
+
+[2]: {{url}}
+
+[3]: https://github.com/sirekanian/spacetime
